...
                        Button(action: { viewStore.send(.showSettingsTapped(show: true)) }, label: {
                            Image(systemName: "gearshape")
                                .background{
                                    Rectangle().frame(width: 70, height: 70).opacity(0.001) //Increase tap area
                                }
                        })
                        .accessibilityIdentifier("button.settings.id")
                        .buttonStyle(PlainButtonStyle())
                    }
                    .font(.title)
                    .padding(.vertical, 30)
                    .padding(.horizontal, 20)
                    
...
                            BoxedInfoView(name: Localazed.diameter, value: viewStore.diameter)
                            BoxedInfoView(name: Localazed.mass, value: viewStore.mass)
                            BoxedInfoView(name: Localazed.payload_weight, value: viewStore.payloadWeights)
                        }
                        .padding(.horizontal, 20)
                    }
                    .accessibilityIdentifier("scroll.info.id")
                    Group {
                        VStack(alignment: .leading, spacing: 10) {
                            RowInfoView(name: Localazed.first_flight, value: viewStore.firstFlight.getFormatedDateText)
                            RowInfoView(name: Localazed.country, value: "\(viewStore.countryID)")
                            RowInfoView(name: Localazed.cost_per_launch, value: String(format: "$%.1f", Double(viewStore.costPerLaunch / 1000000)), type: Localazed.mil)
                        }
...
